<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="6dp"
        app:cardElevation="4dp"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/task_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/task_name"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/task_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/task_details"
                android:textSize="20sp"
                android:layout_marginTop="10dp"/>

            <Button
                android:id="@+id/btn_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/str_edit" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.appcompat.widget.LinearLayoutCompat>